--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <video src="movie_mini.mp4" autoplay muted playsinline></video>
+    <video src="movie_mini.mp4" muted playsinline></video>
 </body>
 </html>
